<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.MainActivity">

    <!--<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    android:id="@+id/idDrawerLayout"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    android:fitsSystemWindows="true"-->
    <!--    tools:context=".vista.MainActivity">-->

    <!--    <com.google.android.material.navigation.NavigationView-->
    <!--        android:id="@+id/sideNavView"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:layout_gravity="start"-->
    <!--        app:menu="@menu/user_options_menu"-->
    <!--        android:fitsSystemWindows="true"/>-->


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#000"
        android:theme="@style/AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/btProfile"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#000" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/btSettings"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_baseline_settings_24"
                />


        </LinearLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="#fff"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <include layout="@layout/content_scrolling_buttons" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

